Update Clustering of countries based on socio-economic and health factors.ipynb

--- a/Clustering of countries based on socio-economic and health factors.ipynb
+++ b/Clustering of countries based on socio-economic and health factors.ipynb
@@ -28,12 +28,7 @@
     "from sklearn.cluster import KMeans\n",
     "\n",
     "# To perform PCA\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "#To perform hierarchical clustering\n",
-    "from scipy.cluster.hierarchy import linkage\n",
-    "from scipy.cluster.hierarchy import dendrogram\n",
-    "from scipy.cluster.hierarchy import cut_tree\n"
+    "from sklearn.decomposition import PCA\n
    ]
   },
   {
